src/main/resources/cpp/tests/neg/N03_ref_noinit.cpp
int main() {
    int& r; // Fehler: Referenz ohne Initialisierung

    return 0;
}
